[build-system]
requires = ["setuptools>=61.0.0", "wheel", "cython", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sorted_nearest"
version = "0.0.42"
description = "Find nearest intervals."
readme = "README.md"
authors = [{ name = "Endre Bakken Stovner", email = "endbak@pm.me" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta", "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Scientific/Engineering"
]
keywords = ["nearest"]
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytype]
inputs = ['sorted_nearest']

[project.urls]
Homepage="http://github.com/pyranges/sorted_nearest"

# ---------------------------------------------------------------------------
# cibuildwheel – produces portable manylinux wheels (no -march=native)
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
# Build CPython 3.9–3.13 only; skip PyPy and 32-bit builds
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip  = "*-win32 *-manylinux_i686 *-musllinux*"

[tool.cibuildwheel.linux]
# manylinux2014 (glibc 2.17) targets the broadest x86-64 baseline.
# CFLAGS ensures the compiler uses generic x86-64 (no -march=native).
manylinux-x86_64-image = "manylinux2014"
environment = { CFLAGS = "-O2 -march=x86-64", CXXFLAGS = "-O2 -march=x86-64" }
before-build = "pip install cython"

[tool.cibuildwheel.macos]
before-build = "pip install cython"
# Build universal2 wheels (Intel + Apple Silicon)
archs = ["x86_64", "arm64"]
